# Ryujinx-Mako

./: .editorconfig  LICENSE  README.md  action.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/actions/execute-command/: README.md  action.yml
.github/actions/setup-mako/: README.md  action.yml
.github/workflows/: format.yml  test.yml
ryujinx_mako/: __init__.py  __main__.py  _const.py  update_reviewers.py
ryujinx_mako/commands/: __init__.py  _subcommand.py  exec_ryujinx_tasks.py  setup_git.py  update_reviewers.py
templates/: reviewers.yml
tools/: generate_help.py
