[tool.poetry]
name = "Ryujinx-Mako"
version = "0.0.0"
description = "A custom GitHub App to aid Ryujinx with project management and moderation"
license = "MIT"
authors = [
    "Ryujinx Team and Contributors"
]
readme = "README.md"
repository = "https://github.com/Ryujinx/Ryujinx-Mako"
packages = [{include = "ryujinx_mako"}]

[tool.poetry.dependencies]
python = ">=3.8"
PyGithub = "^2.2.0"
PyYAML = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"

[tool.poetry.scripts]
ryujinx-mako = "ryujinx_mako.__main__:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
